--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
 <body>
     <div id="app">
         <header>
-            <h1>ODMusic</h1>
+            <h1 id="headerTitle">ODMusic</h1>
             <button id="albumButton" class="icon-button">
                 <svg viewBox="0 0 24 24" width="24" height="24">
                     <path fill="currentColor" d="M12,11A1,1 0 0,0 11,12A1,1 0 0,0 12,13A1,1 0 0,0 13,12A1,1 0 0,0 12,11M12,16.5C9.5,16.5 7.5,14.5 7.5,12C7.5,9.5 9.5,7.5 12,7.5C14.5,7.5 16.5,9.5 16.5,12C16.5,14.5 14.5,16.5 12,16.5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"/>
@@ -58,6 +58,16 @@
                         <button id="createAlbum">作成</button>
                     </div>
                     <div id="albumList"></div>
+                </div>
+            </div>
+        </div>
+
+        <div id="confirmDeleteModal" class="confirm-modal" hidden>
+            <div class="confirm-modal-content">
+                <p id="confirmDeleteMessage"></p>
+                <div class="confirm-modal-buttons">
+                    <button id="confirmDeleteBtn" class="danger-button">削除</button>
+                    <button id="confirmCancelBtn">やめる</button>
                 </div>
             </div>
         </div>
