--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             }
 
             if (!account) {
-                console.error("ログインできませんでした。");
+                alert("ログインできませんでした。");
                 return null;
             }
 
